Prevent top left UI overlap

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -41,7 +41,7 @@
   }
 }
 
-.action-icon-container_left {
+.action-icon-container--left {
   display: flex;
   font-size: 16px;
   left: 8px;
